--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,151 @@
-.App {
-  padding: 20px;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+html {
+  --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  --font-title: Georgia, "Times New Roman", Times, serif;
+  --font-size: 1.2rem;
+  --color: rgb(181, 202, 218);
+  --color-light: #adf;
+  --color-dark: rgb(2, 5, 26);
+  --radius: 0.2rem;
+}
+
+body {
+  margin: 1.5rem;
+}
+
+body,
+input,
+textarea,
+button {
+  font-size: var(--font-size);
+  font-family: var(--font);
+}
+
+h1,
+h2,
+h3 {
+  font-family: var(--font-title);
+}
+
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 1rem 0;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  margin-bottom: 0.5rem;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.25rem;
+}
+select,
+input,
+textarea {
+  display: block;
+  border: 1px solid #ccc;
+  width: 100%;
+  padding: 0.8rem;
+  border-radius: var(--radius);
+  background: #eee;
+  transition: 0.2s;
+  margin-bottom: 30px;
+}
+select {
+  width: 50%;
+}
+input:focus,
+textarea:focus {
+  outline: none;
+  border-color: var(--color);
+  background: white;
+  box-shadow: 0 0 0 3px var(--color-light);
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  border-radius: var(--radius);
+  transition: 0.1s;
+  background: var(--color);
+  color: var(--color-dark);
+  padding: 0.4rem 1rem;
+  margin-right: 16px;
+  margin-bottom: 16px;
+}
+
+button:hover,
+button:focus {
+  background: var(--color);
+  box-shadow: 0 0 0 3px var(--color-light), 0 0 0 4px var(--color);
+  outline: none;
+}
+
+button:active {
+  box-shadow: 0 0 0 3px var(--color), 0 0 0 4px var(--color);
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: wait;
+}
+
+hr {
+  border: 2px solid black;
+  margin: 2rem auto;
+}
+header {
+  margin-top: 4rem;
+}
+.container {
+  margin-left: 30%;
+}
+
+.loading {
+  margin-top: 6rem;
+  margin-left: 40%;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 20px solid #ccc;
+  border-right-color: transparent;
+  animation: loading 1s infinite;
+}
+
+@keyframes loading {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.estados {
+  margin-top: 3rem;
+}
+.estados > li {
+  border-bottom: 3px solid;
+  cursor: pointer;
+  width: 15em;
+}
+.btnInicio {
+  margin-left: 0rem;
+  padding: 0.2rem 0.8rem;
+  margin-right: 12px;
+  background: #ccc;
+  font-size: 0.8rem;
 }
 
 ul {
@@ -27,5 +173,6 @@ ul > li button {
 
 li > input {
   border: none;
+  background: none;
   margin-right: 40rem;
 }
